[tool.poetry]
name = "electricity-pricing-online-learning"
version = "0.1.0"
description = ""
authors = ["Javier Vela <javier.vela00@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.13"
ipykernel = "^6.29.5"
river = "^0.22.0"
tabulate = "^0.9.0"
pandas = "^2.2.3"
matplotlib = "^3.10.1"
seaborn = "^0.13.2"
scikit-learn = "^1.6.1"
jinja2 = "^3.1.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
